# aether_engine

./: Cargo.toml
cmd/engine-editor/: Cargo.toml
cmd/game-client/: Cargo.toml
cmd/game-client/src/: main.rs
crates/engine-audio/: Cargo.toml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-i18n/: Cargo.toml
crates/engine-i18n/src/: lib.rs
crates/engine-network/: Cargo.toml
crates/engine-physics/: Cargo.toml
crates/engine-renderer/: Cargo.toml
crates/engine-renderer/src/: renderer.rs
crates/engine-renderer/src/shaders/: shader.wgsl
crates/engine-scripting/: Cargo.toml
locales/: de.toml  en.toml
