[workspace]
members = [
    "crates/engine-core",
    "crates/engine-renderer",
    "crates/engine-physics",
    "crates/engine-audio",
    "crates/engine-network",
    "crates/engine-scripting",
    "cmd/engine-editor",
    "cmd/game-client",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
bevy_ecs = "0.18.0"
wgpu = "28.0.0"
winit = "0.30.12"
native-dialog = "0.9.6"
