[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-renderer = { path = "../../crates/engine-renderer" }
engine-i18n = { path = "../../crates/engine-i18n" }
winit = { workspace = true }
anyhow = { workspace = true }
native-dialog = { workspace = true }
pollster = "0.4"
